<resources>
    <string name="app_name">EnglishToMetricConverterBrianW</string>
    <string name="txtTitle">English to Metric Converter</string>
    <string name="temp">Temperature</string>
    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="volume">Volume</string>
    <string name="btnNext">Next</string>
    <string name="tempChart">Fahrenheit to Celsius:\nC = (F - 32) * .5556\n\nKelvin to Celsius:\nC = K - 273.15\n</string>
    <string name="weightChart">Pounds to Kilograms:\nkg = lbs * 0.453592\n\nOunces to Grams:\n g = oz * 28.3495\n\n</string>
    <string name="lengthChart">Feet to Meters:\n m = ft * .3048\n\nInches to Centimeters:\n cm = in * 2.54\n\nInches to Millimeters:\n mm = in * 25.4\n\nMiles to Kilometers:\n
    km = mi * 1.60934\n\n</string>
    <string name="volumeChart">Fluid Ounces to Millilitres:\nmL = fl oz * 29.5735\n\nGallons to Liters:\n L = gal * 3.78541\n\nFluid Ounces to Liters:\nL = fl oz * 33.814\n\n </string>
    <string name="btnConvert">Convert</string>
    <string name="btnBack">Back</string>
    <string name="fromLabel">From: </string>
    <string name="toLabel">To: </string>
    <string name="error">Error</string>
    <string name="tempFahrenheitHint">° F</string>
    <string name="tempKelvinHint">° K</string>
    <string name="weightPoundsHint">Lbs</string>
    <string name="weightOuncesHint">Oz</string>
    <string name="distanceFeetHint">Ft</string>
    <string name="distanceInchesHint">In</string>
    <string name="distanceYardsHint">Yds</string>
    <string name="distanceMilesHint">Mi</string>
    <string name="volumeGallonsHint">Gal</string>
    <string name="volumeOuncesHint">Oz</string>
    <string name="errMsg">You must enter a value</string>
    <string name="convertValue">value to convert</string>



    <string-array name="metricWeightArray">
        <item>Grams</item>
        <item>Kilograms</item>
    </string-array>
    <string-array name="standardWeightArray">
        <item>Pounds</item>
        <item>Ounces</item>
    </string-array>
    <string-array name="metricTempArray">
        <item>Celsius</item>
    </string-array>
    <string-array name="standardTempArray">
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="metricDistanceArray">
        <item>Meters</item>
        <item>Centimeters</item>
        <item>Millimeters</item>
        <item>Kilometers</item>
    </string-array>
    <string-array name="standardDistanceArray">
        <item>Feet</item>
        <item>Inches</item>
        <item>Yards</item>
        <item>Miles</item>
    </string-array>
    <string-array name="metricVolumeArray">
        <item>Millilitres</item>
        <item>Liters</item>
    </string-array>
    <string-array name="standardVolumeArray">
        <item>Ounces</item>
        <item>Gallons</item>
    </string-array>

</resources>
