<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Converter">

    <Spinner
        android:id="@+id/idSpinStandard"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:entries="@array/standardTempArray"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="@+id/idInputStandard"
        app:layout_constraintTop_toBottomOf="@+id/idInputStandard" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/fromLabel"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idConverterTitle" />

    <EditText
        android:importantForAutofill="no"
        android:id="@+id/idInputStandard"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/convertValue"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="UnusedAttribute" />

    <Spinner
        android:id="@+id/idSpinMetric"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginEnd="20dp"
        android:entries="@array/metricTempArray"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/idSpinStandard" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:gravity="start|center_vertical"
        android:text="@string/toLabel"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/idConverterTitle"
        android:layout_width="383dp"
        android:layout_height="124dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idDisplayConversion"
        android:layout_width="369dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:inputType="none"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSpinStandard" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/btnConvert"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDisplayConversion" />
</android.support.constraint.ConstraintLayout>