<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TempConversion">

    <TextView
        android:id="@+id/textView"
        android:layout_width="360dp"
        android:layout_height="124dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/temp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:entries="@array/standardTempArray"
        android:spinnerMode="dropdown"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="292dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:entries="@array/metricTempArray"
        android:spinnerMode="dropdown"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="290dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:gravity="left|center_vertical"
        android:text="TextView"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="155dp"
        tools:text="@string/toLabel" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:gravity="left|center_vertical"
        android:text="@string/fromLabel"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="158dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="232dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="141dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="232dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="186dp"
        android:layout_height="109dp"
        android:text="TextView"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="407dp" />

</android.support.constraint.ConstraintLayout>